# codeowners-ci

./: AUTHORS.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/codeowener_ci/: __init__.py  skeleton.py
src/codeowener_ci.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_skeleton.py
