[tool.poetry]
name = "codeowener-ci"
version = "0.1.0"
description = "Ci tool to check for codeowner coverage"
authors = ["Alec Harmon <alecharmon@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
codeowners = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
